--- a/templates/BackEnd/listeDesComptesClients.html.twig
+++ b/templates/BackEnd/listeDesComptesClients.html.twig
@@ -86,6 +86,9 @@
         <div class="d-flex justify-content-start mb-3">
             <div class="w-75">
                 <span class="fw-bold fs-3">{{cc.client.prenom}} {{cc.client.nom}}</span><br>
+                {% if cc.client.societe is defined and cc.client.societe is not empty %}
+                    <span class="fst-italic">{{cc.client.societe}}</span><br>
+                {% endif %}
                 {{cc.nbContrats}} contrat{% if cc.nbContrats > 1 %}s{% endif %}
             </div>
             <div class="d-flex flex-column align-items-center justify-content-center">
