--- a/templates/FrontEnd/listeDesContrats.html.twig
+++ b/templates/FrontEnd/listeDesContrats.html.twig
@@ -62,11 +62,24 @@
         <div class="col-12 col-md-6 col-lg-5 d-flex justify-content-center">
             <div class="card bg-transparent" style="width: 18rem;">
                 <div class="card-body d-flex flex-column shadow">
-                    <span class="card-title mx-auto mb-3 fs-2 fw-light">{{client.prenom}} {{client.nom}}</span>
-                    <span class="card-text"><span class="fw-bold">Fixe :</span> {{client.telephoneFixe}}</span>
-                    <span class="card-text"><span class="fw-bold">Mobile :</span> {{client.telephoneMobile}}</span>
-                    <span class="card-text mt-2 mb-2">{{client.rueEtNumero}}, {{client.codePostal}} {{client.ville}}</span>
-                    <span class="card-text"><span class="fw-bold">Société :</span> {{client.societe}}</span>
+                    {% if ( client.prenom is defined and client.prenom is not empty ) and ( client.nom is defined and client.nom is not empty ) %}
+                        <span class="card-title mx-auto mb-3 fs-2 fw-light">{{client.prenom}} {{client.nom}}</span>
+                    {% endif %}
+                    {% if client.telephoneFixe is defined and client.telephoneFixe is not empty %}
+                        <span class="card-text"><span class="fw-bold">Fixe :</span> {{client.telephoneFixe}}</span>
+                    {% endif %}
+                    {% if client.telephoneMobile is defined and client.telephoneMobile is not empty %}
+                        <span class="card-text"><span class="fw-bold">Mobile :</span> {{client.telephoneMobile}}</span>
+                    {% endif %}
+                    {% if ( client.rueEtNumero is defined and client.rueEtNumero is not empty ) and
+                    ( client.codePostal is defined and client.codePostal is not empty ) and
+                    ( client.ville is defined and client.ville is not empty )
+                    %}
+                        <span class="card-text mt-2 mb-2">{{client.rueEtNumero}}, {{client.codePostal}} {{client.ville}}</span>
+                    {% endif %}
+                    {% if client.societe is defined and client.societe is not empty %}
+                        <span class="card-text"><span class="fw-bold">Société :</span> {{client.societe}}</span>
+                    {% endif %}
                 </div>
             </div>
         </div>
