--- a/templates/FrontEnd/_commentaire_recursive.html.twig
+++ b/templates/FrontEnd/_commentaire_recursive.html.twig
@@ -1,7 +1,7 @@
 <div style="margin-left: {{ niveau * 20 }}px; margin-top: 20px; border-left: 1px solid rgb(248,249,250); padding-left: 10px;">
     <div class="d-flex flex-column">
         <span><strong style="font-size: .8em;">Commentaire :</strong> {{ commentaire.texte }}</span>
-        <span class="fst-italic fw-light mb-2">{{commentaire.idUtilisateur.prenom}} {{commentaire.idUtilisateur.nom}}, {{ commentaire.dateHeureInsertion |format_datetime(locale='fr', pattern='EEEE d MMMM y à HH:mm') }}</span>
+        <span class="fst-italic fw-light mb-2" style="font-size: .8em;">{{commentaire.idUtilisateur.prenom}} {{commentaire.idUtilisateur.nom}}, {{ commentaire.dateHeureInsertion |format_datetime(locale='fr', pattern='EEEE d MMMM y à HH:mm') }}</span>
     </div>
 
     {% for photo in commentaire.photos %}
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </div>
-        <p class="fs-6 fst-italic fw-light">{{ photo.legende }}</p>
+        <p class="fst-italic fw-light" style="font-size: .8em;">{{ photo.legende }}</p>
 
     {% endfor %}
 
