--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
         </header>
 
         {% set sujet = app.session.get('sujet') %}
-        <nav class="navbar navbar-expand-lg mb-3">
+        <nav class="navbar navbar-expand mb-3">
         <div class="container-fluid bg-light bg-opacity-10 mb-3">
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
