--- a/templates/BackEnd/listeDesComptesClients.html.twig
+++ b/templates/BackEnd/listeDesComptesClients.html.twig
@@ -85,11 +85,17 @@
     {% for cc in listeDesComptesClients %}
         <div class="d-flex justify-content-start mb-3">
             <div class="w-75">
-                <span class="fw-bold fs-3">{{cc.client.prenom}} {{cc.client.nom}}</span><br>
-                {% if cc.client.societe is defined and cc.client.societe is not empty %}
-                    <span class="fst-italic">{{cc.client.societe}}</span><br>
-                {% endif %}
-                {{cc.nbContrats}} contrat{% if cc.nbContrats > 1 %}s{% endif %}
+                <span class="fw-bold fs-6">{{cc.client.prenom}} {{cc.client.nom}}</span><br>
+                <div class="row">
+                    <div class="col-1"></div>
+                    {% if cc.client.societe is defined and cc.client.societe is not empty %}
+                    <div class="col-5 fw-light fst-italic">{{cc.client.societe}}</div>
+                    {% endif %}
+                </div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col-5 fw-light fst-italic">{{cc.nbContrats}} contrat{% if cc.nbContrats > 1 %}s{% endif %}</div>
+                </div>
             </div>
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <a href="{{ path('app_liste_des_contrats' , {id : cc.client.id }) }}" class="btn btn-outline-light btn-sm shadow w-100 mb-3" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Voir">
@@ -100,6 +106,9 @@
                 </a>
             </div>
         </div>
+        {% if not loop.last %}
+        <div class="row"><div class="col-2"></div><div class="col-8 border-bottom border-light border-opacity-50 mb-3 ps-5 pe-5"></div><div class="col-2"></div></div>
+        {% endif %}
     {% endfor %}
 </div>
 
@@ -108,5 +117,7 @@
 {% else %}
 <a href="{{ path('app_login') }}" class="btn btn-outline-light btn-sm shadow mt-4">Retour</a>
 {% endif %}
+
+<br><br>
 
 {% endblock %}
