--- a/templates/FrontEnd/listeDesContrats.html.twig
+++ b/templates/FrontEnd/listeDesContrats.html.twig
@@ -77,7 +77,7 @@
                     %}
                         <span class="card-text mt-2 mb-2">{{client.rueEtNumero}}, {{client.codePostal}} {{client.ville}}</span>
                     {% endif %}
-                    {% if client.societe is defined and client.societe is not empty %}
+                    {% if client.societe is defined and client  .societe is not empty %}
                         <span class="card-text"><span class="fw-bold">Société :</span> {{client.societe}}</span>
                     {% endif %}
                 </div>
@@ -137,27 +137,27 @@
             <span class="fw-bold fs-6">{{c.numeroContrat}}</span><br>
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 fw-bold">Début prévu :</div>
+                <div class="col-5 fw-light">Début prévu :</div>
                 <div class="col-6">{{ c.dateDebutPrevue ? c.dateDebutPrevue|date('d-m-Y') : '' }}</div>
             </div>
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 fw-bold">Fin prévue :</div>
+                <div class="col-5 fw-light">Fin prévue :</div>
                 <div class="col-6">{{ c.dateFinPrevue ? c.dateFinPrevue|date('d-m-Y') : '' }}</div>
             </div>
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 fw-bold">État :</div>
+                <div class="col-5 fw-light">État :</div>
                 <div class="col-6">{{ etat.etat }}</div>
             </div>
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 fw-bold">Début :</div>
+                <div class="col-5 fw-light">Début :</div>
                 <div class="col-6">{{ c.dateDebut ? c.dateDebut|date('d-m-Y') : '' }}</div>
             </div>
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 fw-bold">Fin :</div>
+                <div class="col-5 fw-light">Fin :</div>
                 <div class="col-6">{{ c.dateFin ? c.dateFin|date('d-m-Y') : '' }}</div>
             </div>
 
@@ -172,6 +172,9 @@
                 </a>
             </div>
         {# </div> #}
+        {% if not loop.last %}
+        <div class="row"><div class="col-2"></div><div class="col-8 border-bottom border-light border-opacity-50 mt-4 mb-3 ps-5 pe-5"></div><div class="col-2"></div></div>
+        {% endif %}
     {% endfor %}
 </div>
 
