--- a/templates/FrontEnd/AfficherFAC.html.twig
+++ b/templates/FrontEnd/AfficherFAC.html.twig
@@ -10,6 +10,8 @@
     </a>
 </div>
 
+<h5 class="d-flex justify-content-center mb-4">Fiche d'avancement chantier : {{contrat.intitule}}</h5>
+
 <div class="d-flex justify-content-between">
     <div class="d-flex justify-content-start">
 {% if employe %}
