--- a/templates/FrontEnd/AjouterUnCommentaire.html.twig
+++ b/templates/FrontEnd/AjouterUnCommentaire.html.twig
@@ -36,6 +36,8 @@
     </a>
 </div>
 
+<h5 class="d-flex justify-content-center mb-4">Ajouter un commentaire</h5>
+
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
