--- a/templates/FrontEnd/UniqueEditerUnePublication.html.twig
+++ b/templates/FrontEnd/UniqueEditerUnePublication.html.twig
@@ -9,6 +9,8 @@
     </a>
 </div>
 
+<h5 class="d-flex justify-content-center mb-5">Editer une publication</h5>
+
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
@@ -113,6 +115,8 @@
   </div>
 </div>
 {% endif %}
+
+<br>
 
 {% if publication is defined and publication.photos|length > 0 %}
 <script>
