--- a/templates/FrontEnd/EditerUnCompteClient.html.twig
+++ b/templates/FrontEnd/EditerUnCompteClient.html.twig
@@ -10,6 +10,8 @@
     </a>
 </div>
 
+<h5 class="d-flex justify-content-center">{% if edition == true %}Editer{% else %}Ajouter{% endif %} un compte client</h5>
+
 {{ form_start(form) }}
 
 <div class="mb-3">
@@ -116,7 +118,7 @@
     {{ form_row(form.submit) }}
     <a type="button"
        href="{{ path('app_liste_des_comptes_clients') }}"
-       class="btn btn-outline-secondary btn-sm ms-4">
+       class="btn btn-outline-light btn-sm shadow ms-4">
         Abandonner
     </a>
 </div>
