--- a/templates/FrontEnd/EditerUnContrat.html.twig
+++ b/templates/FrontEnd/EditerUnContrat.html.twig
@@ -10,7 +10,7 @@
     {% endfor %}
 </ul> #}
 
-{% block title %}{% if edition == true %}Editer{% else %}Ajouter{% endif %} un compte client{% endblock %}
+{% block title %}{% if edition == true %}Editer{% else %}Ajouter{% endif %} un contrat{% endblock %}
 
 {% block body %}
 
@@ -20,9 +20,7 @@
     </a>
 </div>
 
-<h5 class="d-flex justify-content-center">
-{% if edition == true %}Editer{% else %}Ajouter{% endif %} un Contrat
-</h5>
+<h5 class="d-flex justify-content-center">{% if edition == true %}Editer{% else %}Ajouter{% endif %} un Contrat</h5>
 
 {{ form_start(form) }}
 
@@ -80,7 +78,7 @@
 
     </div>
 
-{% if edition == true %}
+{# {% if edition == true %}
 <div class="col-12 col-md-12">
 
     {{ form_label(form.nomContratActuel) }}
@@ -88,7 +86,7 @@
     {{ form_errors(form.nomContratActuel) }}
 
 </div>
-{% endif %}
+{% endif %} #}
 
 <div class="row g-3 mt-2">
     <div class="col-12 col-md-6">
