--- a/templates/FrontEnd/voirUnContrat.html.twig
+++ b/templates/FrontEnd/voirUnContrat.html.twig
@@ -109,7 +109,7 @@
 
 <div class="d-flex justify-content-center">
     <div class="d-flex flex-column" style="width: fit-content">
-        <div class="badge text-bg-light">
+        <div class="badge">
             <div class="d-flex justify-content-between d-inline-block mt-1">
                 <button id="prev" class='btn btn-outline-primary btn-sm shadow mb-1'>Page précédente</button>
                 &nbsp; &nbsp;
@@ -124,94 +124,94 @@
     </div>
 </div>
 
-    <script type="module">
+<script type="module">
 
-        const url = "{{ asset('storage/' ~ contrat.cheminFichier) }}";
+    const url = "{{ asset('storage/' ~ contrat.cheminFichier) }}";
 
-        var { pdfjsLib } = globalThis;
+    var { pdfjsLib } = globalThis;
 
-        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
 
-        var pdfDoc = null,
-            pageNum = 1,
-            pageRendering = false,
-            pageNumPending = null,
-            scale = 1,
-            canvas = document.getElementById('the-canvas'),
-            ctx = canvas.getContext('2d');
+    var pdfDoc = null,
+        pageNum = 1,
+        pageRendering = false,
+        pageNumPending = null,
+        scale = 1,
+        canvas = document.getElementById('the-canvas'),
+        ctx = canvas.getContext('2d');
 
-        function renderPage(num) {
-            pageRendering = true;
-            pdfDoc.getPage(num).then(function(page) {
-                var viewport = page.getViewport({scale: scale});
-                canvas.height = viewport.height;
-                canvas.width = viewport.width;
+    function renderPage(num) {
+        pageRendering = true;
+        pdfDoc.getPage(num).then(function(page) {
+            var viewport = page.getViewport({scale: scale});
+            canvas.height = viewport.height;
+            canvas.width = viewport.width;
 
-                var renderContext = {
-                    canvasContext: ctx,
-                    viewport: viewport
-                };
-                var renderTask = page.render(renderContext);
+            var renderContext = {
+                canvasContext: ctx,
+                viewport: viewport
+            };
+            var renderTask = page.render(renderContext);
 
-                renderTask.promise.then(function() {
-                    pageRendering = false;
-                    if (pageNumPending !== null) {
-                    renderPage(pageNumPending);
-                    pageNumPending = null;
-                    }
-                });
+            renderTask.promise.then(function() {
+                pageRendering = false;
+                if (pageNumPending !== null) {
+                renderPage(pageNumPending);
+                pageNumPending = null;
+                }
             });
-
-            document.getElementById('page_num').textContent = num;
-        }
-
-        /**
-        * If another page rendering in progress, waits until the rendering is
-        * finised. Otherwise, executes rendering immediately.
-        */
-        function queueRenderPage(num) {
-            if (pageRendering) {
-            pageNumPending = num;
-            } else {
-            renderPage(num);
-            }
-        }
-
-        /**
-        * Displays previous page.
-        */
-        function onPrevPage() {
-            if (pageNum <= 1) {
-            return;
-            }
-            pageNum--;
-            queueRenderPage(pageNum);
-        }
-        document.getElementById('prev').addEventListener('click', onPrevPage);
-
-        /**
-        * Displays next page.
-        */
-        function onNextPage() {
-            if (pageNum >= pdfDoc.numPages) {
-            return;
-            }
-            pageNum++;
-            queueRenderPage(pageNum);
-        }
-        document.getElementById('next').addEventListener('click', onNextPage);
-
-        /**
-        * Asynchronously downloads PDF.
-        */
-        pdfjsLib.getDocument(url).promise.then(function(pdfDoc_) {
-            pdfDoc = pdfDoc_;
-            document.getElementById('page_count').textContent = pdfDoc.numPages;
-
-            // Initial/first page rendering
-            renderPage(pageNum);
         });
-  </script>
+
+        document.getElementById('page_num').textContent = num;
+    }
+
+    /**
+    * If another page rendering in progress, waits until the rendering is
+    * finised. Otherwise, executes rendering immediately.
+    */
+    function queueRenderPage(num) {
+        if (pageRendering) {
+        pageNumPending = num;
+        } else {
+        renderPage(num);
+        }
+    }
+
+    /**
+    * Displays previous page.
+    */
+    function onPrevPage() {
+        if (pageNum <= 1) {
+        return;
+        }
+        pageNum--;
+        queueRenderPage(pageNum);
+    }
+    document.getElementById('prev').addEventListener('click', onPrevPage);
+
+    /**
+    * Displays next page.
+    */
+    function onNextPage() {
+        if (pageNum >= pdfDoc.numPages) {
+        return;
+        }
+        pageNum++;
+        queueRenderPage(pageNum);
+    }
+    document.getElementById('next').addEventListener('click', onNextPage);
+
+    /**
+    * Asynchronously downloads PDF.
+    */
+    pdfjsLib.getDocument(url).promise.then(function(pdfDoc_) {
+        pdfDoc = pdfDoc_;
+        document.getElementById('page_count').textContent = pdfDoc.numPages;
+
+        // Initial/first page rendering
+        renderPage(pageNum);
+    });
+</script>
 
 {% endif %}
 
